@@ -13,6 +13,19 @@
     <artifactId>migration-tool</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <description>Quarkus CLI tool to migrate Spring Boot applications</description>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <name>Migration Tool :: Client</name>
 
     <properties>
